--- a/template/header.html
+++ b/template/header.html
@@ -27,16 +27,25 @@
 									<span>LANGUAGE</span>
 									<i class="fa fa-angle-down"></i>
 								</div>
-								<ul class="first-languages toggle-content">
+					    			<ul class="first-languages toggle-content">
 									<li><a href="#">ENGLISH</a></li>
 									<li><a href="#">BANGLA</a></li>
 									<li><a href="#">ARABIC</a></li>
 								</ul>
 							</div>
 							<div class="curency pull-left">
+                                {% if not user.is_authenticated %}
 								<div class="current">
-									<span><a href="login.html">LOG IN</a></span>
+									<span><a href={% url 'login' %}>LOG IN</a></span>
 								</div>
+                                {% else %}
+								<div class="current">
+									<span><a href=#>{{ user.username }}</a></span>
+								</div>
+                                <div class="current">
+									<span><a href={% url 'logout'%}>LOG OUT</a></span>
+								</div>
+                            {% endif %}
 							</div>
 						</div>
 					</div>
