--- a/template/menu.html
+++ b/template/menu.html
@@ -75,7 +75,7 @@
 									<li><a href="wishlist.html">Wishlist</a></li>
 									<li><a href="checkout.html">Checkout</a></li>
 									<li><a href="account.html">Account</a></li>
-									<li><a href="login.html">Log In</a></li>
+									<li><a href={% url 'login' %}>Log In</a></li>
 									<li><a href="contact-us.html">Contact Us</a></li>
 									<li><a href="404.html">404 Error</a></li>
 								</ul>
@@ -136,10 +136,13 @@
 										<i class="fa fa-search"></i>
 									</a>
 									<div class="header-bottom-search">
-										<form method="POST" action="#" class="search-box">
+										<form method="GET" action="{% url 'search-products' %}{% if request.GET.type %}?type={{ request.GET.type }}&{% endif %}" " class="search-box">
 											<div>
-												<input type="text" autocomplete="off" placeholder="Search" value="">
-											</div>
+												<input type="text" autocomplete="off" placeholder="Search" value="" id="menu_search" name="product_name">
+{#											    <button type="button" class="btn btn">#}
+{#                                                    <i class="fa fa-search"></i>#}
+{#                                                </button>#}
+                                            </div>
 										</form>
 									</div>
 								</li>
