--- a/template/product_detail.html
+++ b/template/product_detail.html
@@ -30,9 +30,9 @@
 							<div class="product-nav">
 								<a href="#"><i class="fa fa-angle-right"></i></a>
 							</div>
-							<h1 class="product_title">{{ productDetail.name }}</h1>
+							<h1 class="product_title">{{ item.product.name }}</h1>
 							<div class="price-box">
-								<span class="new-price">{{ productDetail.price }}</span>
+								<span class="new-price">{{ item.product.price }}</span>
 							</div>
 							<div class="pro-rating">
 								<a href="#"><i class="fa fa-star"></i></a>
@@ -42,12 +42,14 @@
 								<a href="#"><i class="fa fa-star"></i></a>
 							</div>
 							<div class="short-description">
-								<p>{{ product.desc }}</p>
+                                {% if item.product.type %}
+                                    <p>product</p>
+                                {% endif %}
 							</div>
 							<div class="stock-status">
 								<label>Availability</label>: <strong>In stock</strong>
 							</div>
-							<form action="{% url 'add-to-cart' product.id %}" method="POST" >
+							<form action="{% url 'add-to-cart' item.id %}" method="POST" >
 								{%   csrf_token %}
                                 <div class="quantity">
 									<input type="number" name="quantity" value="1" min="1" />
@@ -70,7 +72,7 @@
         <div class="container">
                     <div class="row" style="display: flex">
                         <div style="margin:auto">
-                            <form action="{% url 'comment' product.id %}" method="post" style="display: flex;flex-direction: column; margin-bottom: 20px">
+                            <form action="{% url 'product-details' item.id %}" method="post" style="display: flex;flex-direction: column; margin-bottom: 20px">
                                 {% csrf_token %}
                                 <label style="justify-content: center">Comment</label>
                                 <textarea name="content" id="" cols="50" rows="5"></textarea>
@@ -79,8 +81,6 @@
                         </div>
                     </div>
                     <div class="row" style="margin-bottom: 50px">
-
-
                         {% for cm in comments  %}
                             <div class="media" style="height: 50px;display: flex">
                             <div style="width: 500px"><img style="width: 600px" class="media-object" src="https://bootdey.com/img/Content/avatar/avatar1.png" alt=""></div>
