--- a/template/menu.html
+++ b/template/menu.html
@@ -10,7 +10,7 @@
 					<div class="col-md-8 col-sm-8">
 						<div class="main-menu">
 							<ul class="list-inline">
-							  <li class="expand active"><a href="{% url 'home' %}">Trang chủ</a>
+							  <li class="expand {% if not request.GET.type %} active {% endif %}"><a href="{% url 'home' %}">Trang chủ</a>
 								<ul class="single sub-menu">
 									<li class="sub-menu-title">Trang chủ</li>
 									<li><a href={% url 'search-item' %}>Sản phẩm</a></li>
@@ -150,7 +150,7 @@
                                     {% if user.is_authenticated %}
 									<a href="{% url 'shopping-cart' %}" class="cart-toggler mini-cart-icon">
 										<i class="fa fa-shopping-cart"></i>
-										<span>2</span>
+{#										<span>2</span>#}
 									</a>
 								</li>
                             {% endif %}
