--- a/template/product_detail.html
+++ b/template/product_detail.html
@@ -5,22 +5,16 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                        <img alt="abc" src="{% static 'uploads/' %}{{ item.product.image }}">
 						<div class="single-product-image">
 							<div class="single-product-tab">
 							  <!-- Nav tabs -->
-							  <ul class="nav nav-tabs" role="tablist">
-								<li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab"><img alt="" src="{% static 'web/img/single-product/gallery-1.jpg' %}"></a></li>
-								<li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab"><img alt="" src="{% static 'web/img/single-product/gallery-2.jpg' %}"></a></li>
-								<li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab"><img alt="" src="{% static 'web/img/single-product/gallery-3.jpg'%}"></a></li>
-								<li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab"><img alt="" src="{% static 'web/img/single-product/gallery-4.jpg' %}"></a></li>
-							  </ul>
 
-							  <!-- Tab panes -->
-							  <div class="tab-content">
-								<div role="tabpanel" class="tab-pane active" id="home"><img alt="" src="{% static 'web/img/single-product/gallery-1.jpg' %}"></div>
-								<div role="tabpanel" class="tab-pane" id="profile"><img alt="" src="{% static 'web/img/single-product/gallery-2.jpg'%}"></div>
-								<div role="tabpanel" class="tab-pane" id="messages"><img alt="" src="{% static 'web/img/single-product/gallery-3.jpg'%}"></div>
-								<div role="tabpanel" class="tab-pane" id="settings"><img alt="" src="{% static 'web/img/single-product/gallery-4.jpg'%}"></div>
+                            <div class="tab-content">
+								<div role="tabpanel" class="tab-pane active" id="home"></div>
+								<div role="tabpanel" class="tab-pane" id="profile"><img alt="" src="img/single-product/2.jpg"></div>
+								<div role="tabpanel" class="tab-pane" id="messages"><img alt="" src="img/single-product/3.jpg"></div>
+								<div role="tabpanel" class="tab-pane" id="settings"><img alt="" src="img/single-product/4.jpg"></div>
 							  </div>
 							</div>
 						</div>
@@ -36,10 +30,11 @@
 							</div>
 							<div class="pro-rating">
 								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star"></i></a>
+                                <p>{{ rating }} / 5</p>
+{#								<a href="#"><i class="fa fa-star"></i></a>#}
+{#								<a href="#"><i class="fa fa-star"></i></a>#}
+{#								<a href="#"><i class="fa fa-star"></i></a>#}
+{#								<a href="#"><i class="fa fa-star"></i></a>#}
 							</div>
 							<div class="short-description">
                                 {% if item.product.type %}
@@ -75,6 +70,7 @@
                             <form action="{% url 'product-details' item.id %}" method="post" style="display: flex;flex-direction: column; margin-bottom: 20px">
                                 {% csrf_token %}
                                 <label style="justify-content: center">Comment</label>
+                                <input type="text" name="rating"/>
                                 <textarea name="content" id="" cols="50" rows="5"></textarea>
                                 <input type="submit" value="Comment" class="btn btn-danger" style="margin-top: 20px">
                             </form>
@@ -82,13 +78,21 @@
                     </div>
                     <div class="row" style="margin-bottom: 50px">
                         {% for cm in comments  %}
-                            <div class="media" style="height: 50px;display: flex">
-                            <div style="width: 500px"><img style="width: 600px" class="media-object" src="https://bootdey.com/img/Content/avatar/avatar1.png" alt=""></div>
+                            <div class="media" style="height: 100px;display: flex">
+                            <div style="width: 500px">
+                                <img style="width: 600px" class="media-object" src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
+                            </div>
                                 <div class="media-body" style="margin-left: 20px">
-                            <h4 class="media-heading">{{ cm.customer.username }}</h4>
-                                    <p>{{ cm.content }}</p>
+                                    <a href="#"><i class="fa fa-star"></i></a>
+                                    <p>{{ cm.customer.username }} {{ rating }} / 5 <br> {{ cm.content }}</p>
+{#                                    <a href="#"><i class="fa fa-star"></i></a>#}
+{#                                    <a href="#"><i class="fa fa-star"></i></a>#}
+{#                                    <a href="#"><i class="fa fa-star"></i></a>#}
+{#                                    <a href="#"><i class="fa fa-star"></i></a>#}
                             <ul class="list-unstyled list-inline media-detail pull-left">
-                                <li><i class="fa fa-calendar"></i></li>
+                                <li>
+                                    <i class="fa fa-calendar"> {{ cm.date }}</i>
+                                </li>
                             </ul>
                                 </div>
                             </div>
